--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -12,7 +12,10 @@
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-svg": "^13.4.0",
+    "react-native-svg-uri": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
