--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -14,8 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "expo-linear-gradient": "~12.1.2",
-    "react-native-svg": "^13.4.0",
-    "react-native-svg-uri": "^1.2.3"
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
