--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "expo": "~48.0.10",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "expo-linear-gradient": "~12.1.2",
     "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
