--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
     "expo-linear-gradient": "~12.1.2",
